argocd/kustomize/base/gateway/refrence-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-use-cert
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: common-gateway 
  to:
  - group: ""
    kind: Secret
