argocd/kustomize/base/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway
metadata:
  name: common-server-gateway
spec:
  listeners:
  - protocol: HTTPS
    port: 443
    name: https-listener
    allowedRoutes:
      namespaces:
        from: All
